reorganized imports and improved performance and readability in math rom particles